--- a/style.css
+++ b/style.css
@@ -57,10 +57,18 @@ hr{
 .profile ul{
     width: 300px;
     list-style: none;
-    justify-content: space-around;
 }
 
-section{
+.profile ul li a{
+    color: #ced2d9;
+    transition: all .3s ease-in-out;
+}
+
+.profile ul li a:hover{
+    color: #ffffff3d
+}
+
+.section{
     float: right;
     width: 80%;
     height: 100vh;
@@ -90,11 +98,15 @@ article ul{
 
 /*--------------------------- MEDIA PART ---------------------------*/
 
-@media only screen and (max-width:912px) {
+@media only screen and (max-width:1619px) {
     
     .aside::before{
         float: none;
         width: 100%;
+        height: 100%;
+    }
+
+    body{
         height: 100%;
     }
 
@@ -110,12 +122,12 @@ article ul{
         height: fit-content;
     }
 
-    section{
+    .section{
         float: none;
         width: 100%;
         height: 100vh;
         display: flex;
-        justify-content: start;
+        justify-content: center;
         align-items: center;
     }
 
@@ -141,4 +153,10 @@ article ul{
         margin-top: 15px;
     }
 
+}
+
+@media only screen and (max-width:593px){
+    .section{
+        justify-content: start;
+    }
 }
